# aqtfhe3

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  aho_corasick.rb  aqtfhe3.hpp  benchmark.cpp  benchmark.hpp  main.cpp  params.hpp  spxlios.hpp  suffix_automaton.rb  test.cpp  test.hpp  utility.hpp
test/: 01.in  02.in  02.spec
